--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -152,7 +152,7 @@
                             {{ "Licence started" if isOnLicence }}
                             {{ "PSS started" if isOnPSS  }}
                         {% else %}
-                            {{ "Order ends" if currentOrder.active else "Order ended" }}
+                            {{ "Order ends" if communityData.active else "Order ended" }}
                         {% endif %}
                     </p>
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-end-date">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="govuk-grid-column-one-third">
                     <p class="govuk-hint govuk-!-margin-bottom-0 qa-elapsed-title">
-                        {% if inCustody %}
+                        {% if inCustody or communityData.sentence%}
                             {{ "Status" }}
                         {% elseif isOnLicence or isOnPSS %}
                             {{ "Licence ends" if isOnLicence }}
