--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -181,10 +181,11 @@
                     </p>
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-elapsed-time">
                         {% if inCustody %}
-                        {{ "In custody" }}
-                        {% elseif isOnLicence or isOnPSS %}
-                            {{ moment(communityData.custodyDetails.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) if isOnLicence }}
-                            {{ moment(custodialOrder.pssEndDate, 'YYYY-MM-DD').format(displayDateFormat) if isOnPSS }}
+                            In custody
+                        {% elseif isOnLicence %}
+                            {{ moment(communityData.custodyDetails.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                        {%  elseif isOnPSS %}
+                            {{ moment(custodialOrder.pssEndDate, 'YYYY-MM-DD').format(displayDateFormat) }}
                         {% else %}
                             {{ elapsedTime if communityData.active else communityData.sentence.terminationReason }}
                         {% endif %}
