--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -6,108 +6,43 @@
 {% block cookieBanner %}{% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
-    <nav class="govuk-grid-column-one-quarter pac-hide--mobile" aria-label="Side navigation">
-
-      <h4 class="govuk-caption-l govuk-!-margin-top-0 govuk-!-margin-bottom-4">In this guide</h4>
-
-      <p class="govuk-body">
-        <a href="#ug-overview" class="govuk-link govuk-link--no-visited-state">Overview</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-getting-started" class="govuk-link govuk-link--no-visited-state">Getting started</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4  govuk-!-margin-bottom-2">
-        <a href="#ug-signing-in" class="govuk-link govuk-link--no-visited-state">Signing in</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-selecting-a-court" class="govuk-link govuk-link--no-visited-state">Selecting a court</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-viewing-a-case-list" class="govuk-link govuk-link--no-visited-state">Viewing a case list</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-what-you-can-see-on-the-case-list" class="govuk-link govuk-link--no-visited-state">What you can see
-          on the case list</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-applying-filters-to-a-case-list" class="govuk-link govuk-link--no-visited-state">Applying filters
-          to a case list</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-viewing-case-lists-on-other-days" class="govuk-link govuk-link--no-visited-state">Viewing case
-          lists on other days</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-updates-to-a-case-list" class="govuk-link govuk-link--no-visited-state">Updates to a case list</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-recently-added-cases" class="govuk-link govuk-link--no-visited-state">Recently added cases</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-viewing-a-case" class="govuk-link govuk-link--no-visited-state">Viewing a case</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-key-details" class="govuk-link govuk-link--no-visited-state">Key details</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-case-summary" class="govuk-link govuk-link--no-visited-state">Case summary</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-probation-record" class="govuk-link govuk-link--no-visited-state">Probation record</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-risk-register" class="govuk-link govuk-link--no-visited-state">Risk register</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-viewing-an-order" class="govuk-link govuk-link--no-visited-state">Viewing an order</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-community-orders" class="govuk-link govuk-link--no-visited-state">Community orders</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-custodial-orders" class="govuk-link govuk-link--no-visited-state">Custodial orders</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-breach" class="govuk-link govuk-link--no-visited-state">Breach</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-defendants-with-possible-ndelius-records" class="govuk-link govuk-link--no-visited-state">Defendants
-          with possible NDelius records</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-reviewing-possible-records" class="govuk-link govuk-link--no-visited-state">Reviewing possible
-          records</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-duplicate-records" class="govuk-link govuk-link--no-visited-state">Duplicate records</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-if-none-of-the-possible-records-are-the-defendant" class="govuk-link govuk-link--no-visited-state">If
-          none of the possible records are the defendant</a>
-      </p>
-
-      <p class="govuk-body govuk-!-margin-bottom-2">
-        <a href="#ug-linking-and-unlinking-ndelius-records" class="govuk-link govuk-link--no-visited-state">Linking and
-          unlinking NDelius records</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4 govuk-!-margin-bottom-2">
-        <a href="#ug-link-a-record-to-a-defendant" class="govuk-link govuk-link--no-visited-state">Link a record to a
-          defendant</a>
-      </p>
-      <p class="govuk-body-s govuk-!-margin-left-4">
-        <a href="#ug-unlink-a-record-from-a-defendant" class="govuk-link govuk-link--no-visited-state">Unlink a record
-          from a defendant</a>
-      </p>
-
-    </nav>
     <div class="govuk-grid-column-three-quarters pac-!-grid-column--max-700">
 
       <h1 class="govuk-heading-l">User guide</h1>
+
+      <nav class="" aria-label="navigation">
+
+        <p class="govuk-body">In this guide:</p>
+
+
+        <ul class="govuk-list govuk-!-margin-bottom-5 pac-dash-list">
+          <li>
+            <a href="#ug-overview" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Overview</a>
+          </li>
+          <li>
+            <a href="#ug-getting-started" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Getting started</a>
+          </li>
+          <li>
+            <a href="#ug-viewing-a-case-list" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Viewing a case list</a>
+          </li>
+          <li>
+            <a href="#ug-viewing-a-case" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Viewing a case</a>
+          </li>
+          <li>
+            <a href="#ug-viewing-an-order" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Viewing an order</a>
+          </li>
+          <li>
+            <a href="#ug-defendants-with-possible-ndelius-records" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Defendants
+              with possible NDelius records</a>
+          </li>
+          <li>
+            <a href="#ug-linking-and-unlinking-ndelius-records" class="govuk-link govuk-link--no-underline govuk-!-margin-left-1">Linking and
+              unlinking NDelius records</a>
+          </li>
+        </ul>
+
+
+      </nav>
 
       <h2 class="govuk-heading-m" id="ug-overview">Overview</h2>
 
@@ -125,6 +60,8 @@
       <p class="govuk-body">By providing this information in a more accessible format, staff can prepare for court more
         effectively and provide better advice with less effort.</p>
 
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/3WiMGksB9iE" title="What is Prepare a Case for Sentence" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h2 class="govuk-heading-m" id="ug-getting-started">Getting started</h2>
 
       <h3 class="govuk-heading-s" id="ug-signing-in">Signing in</h3>
@@ -140,6 +77,8 @@
       <p class="govuk-body">The list of courts will appear on 'My courts'.  Select a court to view case lists.</p>
       <p class="govuk-body">If you need to view a different court, go to 'My courts' at the top of the page.</p>
       <p class="govuk-body">To add or remove courts from 'My courts', go to 'Edit my courts'.</p>
+
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/ArIWD4TSFh4" title="How to set up my courts" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
@@ -208,6 +147,8 @@
         other overnight cases.</p>
       <p class="govuk-body">These cases also appear on the full case list.</p>
 
+      <iframe  class="govuk-!-margin-bottom-2" width="560" height="315" src="https://www.youtube.com/embed/jfEEbemA9Cw" title="How to find cases of interest on the case list" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h2 class="govuk-heading-m" id="ug-viewing-a-case">Viewing a case</h2>
       <p class="govuk-body">To view more information about a case, click the defendant's name on the case list.</p>
 
@@ -216,6 +157,8 @@
         case reference number (CRN) if they have an NDelius record.</p>
       <p class="govuk-body">Depending on whether the defendant has a probation record or not, there will also be the
         option to link or unlink an NDelius record.</p>
+
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/TOdktySqqPY" title="How to see more information about a case" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-case-summary">Case summary</h3>
       <p class="govuk-body">The case summary includes:</p>
@@ -263,6 +206,8 @@
       <p class="govuk-body">You will see different information depending on whether it is a community or custodial
         order.</p>
 
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/7NxU5V4HYxs" title="How to see more information about a current order" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h3 class="govuk-heading-s" id="ug-community-orders">Community orders</h3>
       <p class="govuk-body">You can also see:</p>
 
@@ -295,6 +240,8 @@
         <li>any notes or documents associated with the breach</li>
       </ul>
 
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/_-9_s9X9Lqk" title="Getting more information about a defendant in breach" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h2 class="govuk-heading-m" id="ug-defendants-with-possible-ndelius-records">Defendants with possible NDelius
         records</h2>
 
@@ -317,6 +264,8 @@
       <p class="govuk-body">Check if any of the records match the defendant. If a record matches the defendant, select
         it and 'Confirm record'.</p>
 
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/lFeNR_fonRU" title="What to do if a defendant is appearing as 'Possible NDelius record'" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h3 class="govuk-heading-s" id="ug-duplicate-records">Duplicate records</h3>
 
       <p class="govuk-body">If the defendant has duplicate NDelius records, you should select 1 of the records to link
@@ -329,6 +278,8 @@
       <p class="govuk-body">If none of the possible records match the defendant , click 'Can't see the correct record?'
         to either confirm the defendant does not have a probation record or to link them to a different record using an
         NDelius case reference number.</p>
+
+      <iframe class="govuk-!-margin-bottom-2" width="560" height="315" src="https://www.youtube.com/embed/8nLONpnTujE" title="What to do if none of the possible records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-linking-and-unlinking-ndelius-records">Linking and unlinking NDelius
         records</h2>
@@ -349,6 +300,8 @@
       <p class="govuk-body">When you link a record to a defendant, the case will update to show the defendant's new
         probation status, record and risk register.</p>
 
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/3hvaxw7x4aU" title="How to link an NDelius record to a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
       <h3 class="govuk-heading-s" id="ug-unlink-a-record-from-a-defendant">Unlink a record from a defendant</h3>
       <p class="govuk-body">If a defendant has been linked to the wrong NDelius record, you can unlink the record.</p>
 
@@ -361,6 +314,8 @@
 
       <p class="govuk-body">When you unlink a record from a defendant, the case will update to show the defendant as 'No
         record' and give you the option to link a different record.</p>
+
+      <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/Fy6r6kKtajc" title="How to unlink an NDelius record from a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
   </div>
