--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -11,4 +11,4 @@
 @import "dashboard-count";
 @import "white-space-format";
 @import "secondary-text";
-@import "user-guide-dash";
+@import "dash-list";
