:speech_balloon:  PIC-1578: Update content
Signed-off-by: katie-cawthorne <katie.cawthorne@digital.justice.gov.uk>

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -52,24 +52,18 @@
       <p class="govuk-body">The service gives an overview of defendants appearing in a court, including:</p>
 
       <ul class="govuk-list govuk-list--bullet">
+        <li>what they've been charged with</li>
         <li>their probation status</li>
-        <li>their probation record including information on current and previous orders</li>
+        <li>their NDelius probation record including information on current and previous orders</li>
         <li>risk information</li>
       </ul>
 
-      <p class="govuk-body">By providing this information in a more accessible format, staff can prepare for court more
-        effectively and provide better advice with less effort.</p>
+      <p class="govuk-body">By automatically matching defendants to probation records and displaying key information, the service saves time and effort for probation practitioners and court administrators as they prepare for cases in advance and on the day.
+      </p>
 
       <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/3WiMGksB9iE" title="What is Prepare a Case for Sentence" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h2 class="govuk-heading-m" id="ug-getting-started">Getting started</h2>
-
-      <h3 class="govuk-heading-s" id="ug-signing-in">Signing in</h3>
-      <p class="govuk-body">To sign in to the service, go to
-        <a class="govuk-link govuk-link--no-visited-state"
-           href="https://prepare-case-probation.service.justice.gov.uk">https://prepare-case-probation.service.justice.gov.uk</a>
-      </p>
-      <p class="govuk-body">Log in with your NDelius username and password.</p>
 
       <h3 class="govuk-heading-s" id="ug-selecting-a-court">Selecting the courts you work in</h3>
       <p class="govuk-body">When you sign in to the service for the first time, you will be asked to add the courts you work in.</p>
@@ -83,6 +77,8 @@
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
       <p class="govuk-body">The case list will show all cases due to be heard in a court on a particular day.</p>
+      <p class="govuk-body">You can see up to 7 working days ahead. Select a date on the date picker to jump to the case list for that day.
+      </p>
 
       <h3 class="govuk-heading-s" id="ug-what-you-can-see-on-the-case-list">What you can see on the case list</h3>
       <p class="govuk-body">For each case you can see:</p>
@@ -91,7 +87,7 @@
         <li>defendant's name</li>
         <li>their probation status</li>
         <li>the offence they are appearing for</li>
-        <li>case listing number, courtroom and session</li>
+        <li>case listing, courtroom and session</li>
       </ul>
 
       <p class="govuk-body">Defendants can have one of three probation statuses:</p>
@@ -99,6 +95,8 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><strong class="govuk-!-font-weight-bold">Current</strong> - the defendant has a probation record and an
           order that they are currently subject to
+        </li>
+        <li><strong class="govuk-!-font-weight-bold">Pre-sentence record</strong> - the defendant has a probation record for a conviction that has not been sentenced yet
         </li>
         <li><strong class="govuk-!-font-weight-bold">Previously known</strong> - the defendant has a probation record
           but are not supervised by probation currently
@@ -108,8 +106,7 @@
         </li>
       </ul>
 
-      <p class="govuk-body">If a defendant has a 'Possible NDelius record', you need to review the details of the
-        possible record and confirm their probation status.</p>
+      <p class="govuk-body">If a defendant has a 'Possible NDelius record', you need to review the details of any possible records and confirm their probation status.</p>
 
       <h3 class="govuk-heading-s" id="ug-applying-filters-to-a-case-list">Applying filters to a case list</h3>
       <p class="govuk-body">You can filter a case list by probation status, courtroom and session. You can apply
@@ -118,11 +115,18 @@
         filters.</p>
       <p class="govuk-body">You can remove filters individually or all at once by selecting 'Clear all'.</p>
 
-      <h3 class="govuk-heading-s" id="ug-viewing-case-lists-on-other-days">Viewing case lists on other days</h3>
-      <p class="govuk-body">You will always see the case list for 'Today' when you sign in and select a court to
-        view.</p>
-      <p class="govuk-body">The service allows you to see 7 working days ahead and displays these dates above the case
-        list. Select a date to jump to the case list for that day.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/jfEEbemA9Cw" title="How to find cases of interest on the caselist" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+      <h3 class="govuk-heading-s" id="ug-viewing-case-lists-on-other-days">Viewing a case</h3>
+      <p class="govuk-body">To view more information about a case, click the defendant's name on the case list.
+      </p>
+      <p class="govuk-body">In each case you will see the defendant's name, PNC number (if supplied by the police), their probation status and a case reference number (CRN) if they have an NDelius record.
+      </p>
+      <p class="govuk-body">Depending on whether the defendant has a probation record or not, there will also be the option to link or unlink an NDelius record.</p>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/TOdktySqqPY" title="How to see more information about a case" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 
       <h3 class="govuk-heading-s" id="ug-updates-to-a-case-list">Updates to a case list</h3>
       <p class="govuk-body">A case list appears 7 days in advance of the cases being heard and is updated with new cases
@@ -152,8 +156,7 @@
       <h2 class="govuk-heading-m" id="ug-viewing-a-case">Viewing a case</h2>
       <p class="govuk-body">To view more information about a case, click the defendant's name on the case list.</p>
 
-      <h3 class="govuk-heading-s" id="ug-key-details">Key details</h3>
-      <p class="govuk-body">On each case you will see the defendant's name, PNC number, their probation status and a
+      <p class="govuk-body">In each case you will see the defendant's name, PNC number (if supplied by police), their probation status and a
         case reference number (CRN) if they have an NDelius record.</p>
       <p class="govuk-body">Depending on whether the defendant has a probation record or not, there will also be the
         option to link or unlink an NDelius record.</p>
@@ -245,14 +248,13 @@
       <h2 class="govuk-heading-m" id="ug-defendants-with-possible-ndelius-records">Defendants with possible NDelius
         records</h2>
 
-      <p class="govuk-body">Some defendants may have 'Possible NDelius record' as their probation status on a case
-        list.</p>
+      <p class="govuk-body">Some defendants may have 'Possible NDelius record' as their probation status.</p>
 
-      <p class="govuk-body">This happens when the service has either found multiple records that match the defendant's
-        details or one record that partially matches the defendant.</p>
+      <p class="govuk-body">This happens when the service has found one or more records that match the defendant's
+        details.</p>
 
-      <p class="govuk-body">You need to review the records that have been found and select the correct record to confirm
-        the defendant's probation status.</p>
+      <p class="govuk-body">You need to review the records that have been found and select the correct record.
+        This will update the case with the defendant's probation status and NDelius record information.</p>
 
       <h3 class="govuk-heading-s" id="ug-reviewing-possible-records">Reviewing possible records</h3>
       <p class="govuk-body">There are two ways to review possible records for a defendant. You can either go to the case
@@ -268,9 +270,12 @@
 
       <h3 class="govuk-heading-s" id="ug-duplicate-records">Duplicate records</h3>
 
-      <p class="govuk-body">If the defendant has duplicate NDelius records, you should select 1 of the records to link
-        to that defendant for the case and follow your existing processes for flagging duplicate records to the IT
-        team.</p>
+      <p class="govuk-body">If the defendant has duplicate NDelius records, you should select one of the records to link
+        to that defendant for the case.</p>
+
+      <p class="govuk-body">You should make a note of the duplicate CRN and follow your existing processes for flagging duplicate NDelius records.</p>
+
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/wpaijG1k7Uw" title="What to do if both records match the defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h3 class="govuk-heading-s" id="ug-if-none-of-the-possible-records-are-the-defendant">If none of the possible
         records are the defendant</h3>
@@ -298,7 +303,8 @@
       </ul>
 
       <p class="govuk-body">When you link a record to a defendant, the case will update to show the defendant's new
-        probation status, record and risk register.</p>
+        probation status, and display their probation record and risk register information.
+      </p>
 
       <iframe class="govuk-!-margin-bottom-6" width="560" height="315" src="https://www.youtube.com/embed/3hvaxw7x4aU" title="How to link an NDelius record to a defendant" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
