:alien:  PIC-164: updated to common platform endpoints
Signed-off-by: katie-cawthorne <katie.cawthorne@digital.justice.gov.uk>

--- a/server/views/case-summary-record-order-breach.njk
+++ b/server/views/case-summary-record-order-breach.njk
@@ -20,7 +20,7 @@
     {{ govukBackLink({
         classes: 'govuk-!-margin-top-0 govuk-!-margin-bottom-7',
         text: "Back",
-        href: '/' + params.courtCode + '/case/' + params.caseNo + '/record/' + params.convictionId
+        href: '/case/' + params.caseId + '/defendant/' + params.defendantId + '/record/' + params.convictionId
     }) }}
 
     <div class="govuk-grid-row">
