--- a/server/views/case-summary-record-order-licence.njk
+++ b/server/views/case-summary-record-order-licence.njk
@@ -16,7 +16,7 @@
     {%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
     {{ govukBackLink({
         text: "Back to probation record",
-        href: '/' + params.courtCode + '/case/' + data.caseNo + '/record'
+        href: '/case/' + data.caseId + '/defendant/' + data.defendantId + '/record'
     }) }}
 {% endblock %}
 
