--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -7,7 +7,7 @@
 {% if not params.crn %}
   {% set useBackLink = backLink or '/' + params.courtCode + '/cases/' + (caseListDate if caseListDate else "") %}
 {% else %}
-  {% set useBackLink = '/' + params.courtCode + '/match/defendant/' + params.caseNo + '/manual' %}
+  {% set useBackLink = '/case/' + params.caseId + '/match/defendant/' + params.defendantId + '/manual' %}
 {% endif %}
 
 {% block backlink %}
@@ -17,7 +17,7 @@
     text: "Back",
     href: useBackLink
   }) }}
-  
+
 {% endblock %}
 
 {% block content %}
@@ -109,7 +109,7 @@
         </form>
       {% else %}
         <form name="matchDefendant" id="matchDefendant"
-              action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/confirm" method="post"
+              action="/case/{{ params.caseId }}/match/defendant/{{ params.defendantId }}/confirm" method="post"
               novalidate>
 
           <h3 class="govuk-heading-m">NDelius record found</h3>
