--- a/server/views/match-unlink.njk
+++ b/server/views/match-unlink.njk
@@ -21,7 +21,7 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-4">Linked NDelius record</h2>
 
-        <form method="get" action="/{{ params.courtCode }}/match/defendant/{{ params.caseNo }}/nomatch/unlink" novalidate>
+        <form method="get" action="/case/{{ params.caseId }}/match/defendant/{{ params.defendantId }}/nomatch/unlink">
             <dl class="govuk-summary-list">
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">Name</dt>
