--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -51,7 +51,7 @@
 
             {% if data.source | length %}
             <p class="govuk-caption-m govuk-!-margin-top-3">Source:
-            {{ data.source | replace("_", " ") | title }}{% if data.source | lower === "libra" %}, case number {{ params.caseNo }}{% endif %}
+            {{ data.source | replace("_", " ") | title }}{% if data.source | lower === "libra" %}, case number {{ data.caseNo }}{% endif %}
             </p>
             {% endif %}
 
