--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -1,7 +1,7 @@
 {% extends "partials/case-details.njk" %}
 
 {%- set moment = params.moment -%}
-{%- set courtRoom = data.courtRoom - 0 -%}
+{% set courtRoom = data.courtRoom | replace("0", "") if data.courtRoom | first === "0" else data.courtRoom -%}
 {%- set communityData = data.communityData -%}
 {% set defendantFullName = (data.name.forename1 + ' ' + data.name.surname) if (data.name.forename1 and data.name.surname) else data.defendantName %}
 
