--- a/server/views/match-manual.njk
+++ b/server/views/match-manual.njk
@@ -7,7 +7,7 @@
 {% if not params.crn %}
   {% set useBackLink = backLink or '/' + params.courtCode + '/cases/' + (caseListDate if caseListDate else "") %}
 {% else %}
-  {% set useBackLink = '/case/' + params.caseId + '/match/defendant/' + params.defendantId + '/manual' %}
+  {% set useBackLink = '/' + params.courtCode + '/case/' + params.caseId + '/match/defendant/' + params.defendantId + '/manual' %}
 {% endif %}
 
 {% block backlink %}
@@ -109,7 +109,7 @@
         </form>
       {% else %}
         <form name="matchDefendant" id="matchDefendant"
-              action="/case/{{ params.caseId }}/match/defendant/{{ params.defendantId }}/confirm" method="post"
+              action="/{{ params.courtCode }}/case/{{ params.caseId }}/match/defendant/{{ params.defendantId }}/confirm" method="post"
               novalidate>
 
           <h3 class="govuk-heading-m">NDelius record found</h3>
