✨ Support NS gender 🤡 Added NS gender to mock ✅ Added integration test for NS gender ⬆️ Upgrade dependencies
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -103,7 +103,7 @@
                         Gender
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        {% if data.defendantSex === "F" %}Female{% elif data.defendantSex === "M" %}Male{% else %}Unknown{% endif %}
+                        {% if data.defendantSex === "F" %}Female{% elif data.defendantSex === "M" %}Male{% elif data.defendantSex === "NS" %}Not specified{% else %}Unknown{% endif %}
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
