🔥 Remove listing from case summary ✅ Updated integration tests
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/case-summary.njk
+++ b/server/views/case-summary.njk
@@ -46,8 +46,7 @@
 
             <h2 class="govuk-heading-m">Appearance</h2>
             <p class="govuk-body">Court {{ courtRoom }}, {{ data.session | lower }} session,
-                {{ moment(data.sessionStartTime).format('dddd D MMMM') }} ({{ data.listNo }}
-                listing).</p>
+                {{ moment(data.sessionStartTime).format('dddd D MMMM') }}.</p>
 
             {% if data.source | length %}
             <p class="govuk-caption-m govuk-!-margin-top-3">Source:
