--- a/server/views/case-summary-record-order.njk
+++ b/server/views/case-summary-record-order.njk
@@ -194,7 +194,7 @@
             </div>
 
             {% if communityData.custodyDetails.homeDetentionCurfewActualDate or communityData.custodyDetails.licenceExpiryDate or communityData.custodyDetails.topupSupervisionStartDate %}
-                <h2 class="govuk-heading-m govuk-!-margin-top-8">Post release dates</h2>
+                <h2 class="govuk-heading-m govuk-!-margin-top-8">Post-release dates</h2>
                 <table class="govuk-table">
                     <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
