⬆️ Upgrade dependencies 🥅 Corrected breaking changes introduced in govuk-frontend v4.0.0 💄Updated accordion component on Case summary screen 🐛Found and fixed bug setting accordion ID
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.pac-accordion-section-heading {
+  @extend .govuk-\!-font-size-19;
+}
+
 .pac-\!-border-left {
   border-left: 2px solid govuk-colour("mid-grey");
 }
