--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -55,8 +55,8 @@
             {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
 
             {% set html %}
-                <p>We use some essential cookies to make this service work.</p>
-                <p>We’d also like to use analytics cookies so we can understand how you use the service and make
+                <p class="govuk-body">We use some essential cookies to make this service work.</p>
+                <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make
                     improvements.</p>
             {% endset %}
             <form action="/cookie-preference" method="post">
