Custom filter for ordinalNumber of the listing

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -40,12 +40,10 @@
         {{ offences.push('</ol>') }}
 
     {% set listing = [] %}
-        {% if item.probationStatus === "Possible NDelius record" %}
-            {{ listing.push("") }}
-        {% elif item.source === "COMMON_PLATFORM" %}
+        {% if item.source === "COMMON_PLATFORM" %}
             {{ listing.push('<ol class="govuk-list govuk-!-margin-bottom-0">') }}
         {% for listNumberFromCP in item.offences %}
-            {{ listing.push('<li>' + listNumberFromCP.listNo + '<li>') }}
+            {{ listing.push('<li>' + listNumberFromCP.listNo | ordinalNumber + '<li>') }}
         {% endfor %}
             {% else %}
                 {{ listing.push(item.listNo) }}
